# lib_geos

./: CMakeLists.txt  README  README.md  TODO
capi/: CMakeLists.txt
cmake/: PackageConfig.cmake.in  util.cmake
examples/: CMakeLists.txt
include/: CMakeLists.txt
include/geos/: export.h
include/geos/geom/: GeometryList.h
include/geos/geomgraph/: TopologyLocation.h
include/geos/noding/: GeometryNoder.h
include/geos/shape/fractal/: HilbertCode.h  HilbertEncoder.h  MortonCode.h
opt/: folders.csv
src/: CMakeLists.txt
src/geom/: GeometryList.cpp
src/geomgraph/: Depth.cpp
src/operation/buffer/: BufferOp.cpp
tests/: CMakeLists.txt  superbuild.CMakeLists.txt
tests/bigtest/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/geom/: CoordinateArraySequenceFactoryTest.cpp
tests/xmltester/: CMakeLists.txt
tools/: CMakeLists.txt  geos-config.cmake
